VN - Further removal of html and css to pinpoint wrapping issue. No success.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,10 @@
-body {
+/* body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 18px;
   line-height: 34px;
   color: #777777;
-  /* background: url("../images/concrete_seamless.png"); */
-}
+  background: url("../images/concrete_seamless.png");
+} */
 
 /* * {
   box-sizing: border-box;
